# MediaCenter

./: .clang-format  .gitignore  CMakeLists.txt  cmake args  configurator.sh  main.cpp  main.py  qml.qrc
data/test_data/: BackendTestData.json  QueryAboutData.json  RequestActionData.json
script/python/: dbustest.py  main.py
script/qml/: main.js  main.qml  main.qml.autosave
script/qml/controls/: CircularProgressBar.qml  CustomButton.qml  DirectoryEmplacer.qml  ExtensionsList.qml  FlatStringList.qml  ImageViewer.qml  ItemsGrid.qml  LeftMenuButton.qml  MediaSlider.qml  ModalItemList.qml  NextButton.qml  PlayButton.qml  PlaylistDelegate.qml  PopupTextInput.qml  PreviousButton.qml  SearchBar.qml  SearchResults.qml  SongList.qml  SquareButton.qml  TimeLabel.qml  TitleLabel.qml  ToggleButton.qml  TopBarButton.qml  VideoList.qml  patterns.js
script/qml/delegates/: ImageDelegate.qml  PlaylistDelegate.qml  SongDelegate.qml  StringItemDelegate.qml  VideoDelegate.qml
script/qml/logic/: SvgGetter.js
script/qml/menu/: ContentPages.js  ContentPages.qml  LeftMenu.qml  MouseDragHandler.qml  TopBar.qml  VolumeArea.js  VolumeArea.qml
script/qml/pages/: AudioPage.js  AudioPage.qml  HomePage.qml  ImagePage.qml  SettingsPage.qml  VideoPage.qml  homePage.qml  settingsPage.qml
script/qml/pages/audio_page/: AudioPlayer.js  AudioPlayer.qml
src/: Backend.cpp  Backend.hpp  CMakeLists.txt  Environment.cpp  Environment.hpp  Matcher.cpp  Matcher.hpp  Mediator.cpp  Mediator.hpp  Proxy.cpp  Proxy.hpp  main.cpp
src/Common/: CMakeLists.txt
src/Common/ModulesEssentials/: Backend.cpp  Backend.hpp  CMakeLists.txt  Matcher.hpp  MultimediaEngine.cpp  MultimediaEngine.hpp  Proxy.cpp  Proxy.hpp  TaskManager.hpp  ThreadsafeQueue.hpp
src/Common/ModulesEssentials/Mediator/: CMakeLists.txt  Matcher.cpp  Matcher.hpp  Mediator.cpp  Mediator.hpp  example.json
src/Common/ModulesEssentials/SystemNode/: CMakeLists.txt  SystemNode.cpp  SystemNode.hpp
src/Common/MultithreadingUtils/: CMakeLists.txt  TaskManager.cpp
src/Modules/: CMakeLists.txt
src/Modules/DataStorage/: CMakeLists.txt  DataStorage.cpp  DataStorageNode.cpp  DataStorageNode.hpp  MultimediaEngine.cpp
src/Modules/DataStorage/audio/: Audio.cpp  Audio.hpp  CMakeLists.txt
src/Modules/DataStorage/images/: CMakeLists.txt
src/Modules/DataStorage/video/: CMakeLists.txt
src/Modules/Environment/: Environment.cpp  Environment.hpp
src/Modules/Frontend/: AudioPageConnector.cpp  AudioPageConnector.hpp  CMakeLists.txt  Frontend.cpp
src/Modules/MainMediator/: Backend.hpp  CMakeLists.txt  MainMediator.cpp  MainMediatorNode.cpp  MainMediatorNode.hpp
src/data_backend/: CMakeLists.txt
src/data_backend/audio/: CMakeLists.txt
src/multimedia_engine/: MultimediaEngine.cpp  MultimediaEngine.hpp
src/utilities/: CMakeLists.txt  TaskManager.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadsafeList.hpp
tests/: BackendTests.cpp  BackendTests.hpp  CMakeLists.txt  CommonUtils.cpp  CommonUtils.hpp  DataBackendTests.cpp  DataBackendTests.hpp  EnvironmentTests.cpp  EnvironmentTests.hpp  MainBackendTests.cpp  MainBackendTests.hpp  MediatorTests.cpp  MediatorTests.hpp  MultimediaEngineTests.cpp  MultimediaEngineTests.hpp  TaskManagerTests.cpp  TaskManagerTests.hpp  ThreadPoolTests.cpp  ThreadPoolTests.hpp  ThreadsafeListTests.cpp  ThreadsafeQueueTests.cpp  ThreadsafeQueueTests.hpp  main.cpp
tests/Common/: CMakeLists.txt
tests/Common/ModulesEssentials/: CMakeLists.txt
tests/Common/ModulesEssentials/Mediator/: CMakeLists.txt  MediatorTests.cpp  MediatorTests.hpp
tests/Common/ModulesEssentials/SystemNode/: CMakeLists.txt  SystemNodeTests.cpp  SystemNodeTests.hpp
tests/IntegrationTests/: MediatorPackage.hpp  MediatorTester.hpp
tests/TestingUtils/: CMakeLists.txt  Caller.hpp  EventLoop.cpp  EventLoop.hpp  JsonPackage.cpp  JsonPackage.hpp  MediatorTester.cpp  Mock.cpp  QFunctionWrapper.hpp  SimpleSequentialCodeRunner.hpp  WrappersList.cpp  WrappersList.hpp
tests/common_utils/: CMakeLists.txt  Caller.cpp  Caller.hpp  EventLoop.cpp  MediatorPackage.cpp  MediatorPackage.hpp  MediatorTester.hpp  Mock.hpp  QFunctionWrapper.cpp  WrappersList.cpp  WrappersList.hpp
tests/sandbox/: CMakeLists.txt  Caller.cpp  Caller.hpp  Receiver.cpp  Receiver.hpp
